syntax = "proto3";
package auth;
option go_package = "github.com/izstoev10/ai-assistant/services/auth;authpb";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest { string username = 1; string password = 2; }
message LoginResponse { string token = 1; }
